--- a/src/a/pzm/lang/rom.1
+++ b/src/a/pzm/lang/rom.1
@@ -191,6 +191,54 @@ def type_bmp(scr wi hi ln bmp rgb){
 }
 
 
+{
+var dil=0x1020
+var ln=252
+var gln=0x4fb
+var wi=4
+var hi=5
+var rgb=0x800
+var n=16
+var nl=0x0600
+var di
+lp(n){
+  tx(di dil)
+  pl(di wi hi ln rgb d)
+  add(dil nl)
+  addi(rgb 16)
+}
+-1 -1
+def bmp[d]{16  
+  0x6ddd6 0x6e66f 0x6f36f 0x6373e 
+  0x37df3 0xece3e 0x6ced6 0xff244 
+  0x66fd6 0x6d724 0x6ddfd 0xedede
+  0x6ccc7 0xeddde 0xfcecf 0xfcecc 
+}
+-1 -1
+def pl(di wi hi ln rgb d){
+  foo(bmp){
+    type_bmp(di wi hi ln d rgb)
+    sub(di gln)
+    addi(rgb 16)
+  }
+}
+def type_bmp(scr wi hi ln bmp rgb){
+  lp(hi){
+    lp(wi){
+      shf(bmp -1)
+      @ifn stc(scr rgb)
+      @ifz inc(scr)
+      @ifp inc(scr)
+    }
+    add(scr ln)
+  }
+}
+}
+
+
+
+
+
 
 
 
