--- a/src/a/pzm/lang/rom.1
+++ b/src/a/pzm/lang/rom.1
@@ -237,7 +237,161 @@ def type_bmp(scr wi hi ln bmp rgb){
 
 
 
+{
+var tick
+inc(tick)
+st(0x2010 tick)
 
+var ln=252
+var gln=0x4fb
+var wi=4
+var hi=5
+
+var src=baba
+type(src 0x7040 0xffe)
+src=b20
+type(src 0x7058 0xff0)
+
+var di
+var lines=1
+var dil=0x0420
+var nl=0x0600
+var rgb=0xf00
+lp(lines){
+  tx(di dil)
+  pl(di wi hi ln rgb d)
+  add(dil nl)
+}
+-1 -1
+def baba[ch]{4   0xb 0xa 0xb 0xa}
+def b20[ch]{3   2 0 0xb}
+def page[addr]{2  baba b20}
+def bmp[d]{16  
+  0x6ddd6 0x6e66f 0x6f36f 0x6373e 
+  0x37df3 0xece3e 0x6ced6 0xff244 
+  0x66fd6 0x6d724 0x6ddfd 0xedede
+  0x6ccc7 0xeddde 0xfcecf 0xfcecc 
+}
+-1 -1
+def type(ptr file colr){
+  var length
+  ldc(length ptr)
+  lp(length){
+    var glyph
+    var ret
+    var ch
+    ldc(ch ptr)
+    bmp.seek(ret ch)
+    ld(glyph ret)
+    type_bmp(file wi hi ln glyph colr)
+    sub(file gln)
+  }
+}
+def bmp.seek(return record){
+  var temp=bmp
+  tx(return temp)
+  inc(return)
+  add(return record)
+}
+def pl(di wi hi ln rgb d){
+  foo(bmp){
+    type_bmp(di wi hi ln d rgb)
+    sub(di gln)
+    inc(rgb)
+  }
+}
+def type_bmp(scr wi hi ln bmp rgb){
+  lp(hi){
+    lp(wi){
+      shf(bmp -1)
+      @ifn stc(scr rgb)
+      @ifz inc(scr)
+      @ifp inc(scr)
+    }
+    add(scr ln)
+  }
+}
+}
+
+
+{
+var tick
+inc(tick)
+st(0x2010 tick)
+
+var ln=252
+var gln=0x4fb
+var wi=4
+var hi=5
+
+foo(labels){
+  type(ptr dest c)
+}
+
+var di
+var lines=1
+var dil=0x0420
+var nl=0x0600
+var rgb=0xf00
+lp(lines){
+  tx(di dil)
+  pl(di wi hi ln rgb d)
+  add(dil nl)
+}
+-1 -1
+def baba[ch]{4   0xb 0xa 0xb 0xa}
+def b20[ch]{3   2 0 0xb}
+def labels
+[  ptr   dest     c   ]{2
+  baba  0x7050  0xffe         
+  b20   0x7070  0xff0
+}
+def bmp[d]{16  
+  0x6ddd6 0x6e66f 0x6f36f 0x6373e 
+  0x37df3 0xece3e 0x6ced6 0xff244 
+  0x66fd6 0x6d724 0x6ddfd 0xedede
+  0x6ccc7 0xeddde 0xfcecf 0xfcecc 
+}
+-1 -1
+def type(ptr file colr){
+  var length
+  ldc(length ptr)
+  lp(length){
+    var glyph
+    var ret
+    var ch
+    ldc(ch ptr)
+    bmp.seek(ret ch)
+    ld(glyph ret)
+    type_bmp(file wi hi ln glyph colr)
+    sub(file gln)
+  }
+}
+def bmp.seek(return record){
+  var temp=bmp
+  tx(return temp)
+  inc(return)
+  add(return record)
+}
+def pl(di wi hi ln rgb d){
+  foo(bmp){
+    type_bmp(di wi hi ln d rgb)
+    sub(di gln)
+    inc(rgb)
+  }
+}
+def type_bmp(scr wi hi ln bmp rgb){
+  lp(hi){
+    lp(wi){
+      shf(bmp -1)
+      @ifn stc(scr rgb)
+      @ifz inc(scr)
+      @ifp inc(scr)
+    }
+    add(scr ln)
+  }
+}
+}
 
 
 
